# pleaseDontOverlap

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt
src/: CMakeLists.txt  Coordinates.hpp  Label.hpp  LabelFilter.cpp  LabelFilter.hpp  LabelGroup.hpp  LabelGroupList.hpp  Point.hpp  Size.hpp
test/: CMakeLists.txt  CommonTestFunctions.cpp  CommonTestFunctions.hpp  ConsoleTester.cpp  LabelFilterTest.cpp  VisualTester.cpp  tester.py
test/img/: map.pngw
